--- a/Mysql/锁.md
+++ b/Mysql/锁.md
@@ -9,7 +9,7 @@
 在事务的整个期间， 锁不会因为sql语句的结束而结束
 锁的生命周期是伴随整个事务的
 锁从读写就读， 分为读锁和写锁， 又叫共享锁和排他锁
-默认的select语句都是不带锁的恶， 
+默认的select语句都是不带锁的， 
 insert语句是排他锁， 
 
 可以在sql语句显示
