--- a/区块链/巨页内存的开启.md
+++ b/区块链/巨页内存的开启.md
@@ -13,6 +13,7 @@ gpu 分两种类型，
 
 显卡最大32GB，
 
+select * from 
 gpu 显卡， 11G， 向上没有， 下一档的是8G，
 
 做生产用的， 
@@ -214,6 +215,15 @@ FIL_PROOFS_HUGEPAGE_MOUNT=/mnt/huge/ 巨页内存的挂载目录  default: /mnt/
 
 
 
+当前test分支除打款失败的修改，还有其他修改： 
+user 后端修改：
+1. 总收益中加入一般地址的fil个数计算
+2. 去掉昨日收益计算
+3. 用户spacerace产出记录独立为新的接口，页面上新增一个标签页， 解决线上产出记录个数统计错误问题和翻页问题
+
+admin 后端修改：
+增加一般地址添加功能
+ 
 
 
 
