--- a/区块链/开发矿池-收益的分配与审核.md
+++ b/区块链/开发矿池-收益的分配与审核.md
@@ -5,8 +5,9 @@
 矿池能出的块是和其算力有关， 算力就是矿池拥有的空间。 所以矿池的收益完全由空间决定。 
 矿池的空间一部分是卖给了用户， 一部分是平台自己持有， 所以对应的收益就有用户收益， 和平台收益， 如：
 ![-w1227](media/16010045943160.jpg)
+ 
 
-收益的来源是出块， 每出一个块就奖励一定的fil，每期的收益是指一个矿池在一段时间的总收益， 即产生多少fil， 
+收益的来源是出块， 每出一个块就奖励一定的fil，每期的收益是指一个矿池在一段时间的总收益， 即产生多少fil。  
 每期的收益中包含用户收益， 平台服务费， 平台自持收益。 
 一期的收益在申请分配时， 会校验用户的收益是否准确。 
 通过两个表的计算结果来判断用户收益是否准确，
@@ -24,6 +25,9 @@
 在用户收益校验的时候， 会模拟生成本期矿池产品收益表用户收益总和， 按购买订单酸楚矿池用户收益表的用户收益总和。 
 两个总和相等。 用户收益才会通过：
 ![-w1207](media/16010041617568.jpg)
+以上通过收益计算通过验证， 收益本质是从空间计算得出，所以再从空间的角度说明用户收益校验：
+收益是完全按照算力大小严格计算的， 算力大小也是空间大小，单位空间价格乘以总的空间大小， 就是收益， 矿池的用户总空间， 从矿池产品表里计算出用户总空间， 和订单表里计算出该矿池的总空间， 俩个用户总空间大小， 必须完全相等， 用户的收益也就完全相等， 这样才能通过用户收益校验。
+
 校验的时候并不会生成两个收益表的记录。
 
 ### 收益的申请流程
