--- a/区块链/开发矿池-解决收益分配用户收益校验不过的问题.md
+++ b/区块链/开发矿池-解决收益分配用户收益校验不过的问题.md
@@ -1,6 +1,9 @@
  [TOC]
+ 
 ### 引起用户本期收益校验不过的问题 
 ![-w954](media/16009319437120.jpg)
+用户本期收益1， 为矿池产品收益表计算出
+用户本期收益2， 为购买订单表计算出
 
 相应代码：
 ![-w1800](media/16009321969357.jpg)
@@ -85,7 +88,7 @@ pi = {*gitlab.forceup.in/forcepool/admin/api/admin.productIncome | 0xc000297200}
 ![-w1285](media/16009406832985.jpg)
 
 
-#### 问题原因
+#### 问题原因: 购买订单被手动删除了
 先看产品表总共卖出的：
 select sum(true_sale) as totalsale from product where pool_id=154;
 ![-w562](media/16009521326016.jpg)
@@ -94,10 +97,50 @@ select sum(true_sale) as totalsale from product where pool_id=154;
 ![-w727](media/16009522199367.jpg)
 卖出的和买入的不相等， 导致上面的用户收益校验不过，
 
-原因， 那买入30的订单被误删除了， 
+原因， 那买入30的订单被手动删除了， 当时为了解决余额校验不过的问题， 转账表和balance表查出的用户余额不对。 
+
 ####  解决办法： 手动改购买订单的num， 加上30， 
 ![-w1285](media/16009519952931.jpg)
 但还是不对， 虽然从订单中计算的用户收益， 变大了， 离产品计算的用户收益更近了， 但还是不相等， 恰好当初有截图， 按截图加上： 
 ![-w1391](media/16009972769957.jpg)
 订单中与计算用户收益有关的是： 
 ![-w203](media/16009978195269.jpg)
+
+
+####   购买订单中， 用户买该矿池中的总算力
+```
+SELECT sum(buy_power) as sum_power from purchase_orders where pid in ( select id from product where pool_id=154)
+```
+![-w1209](media/16010180005255.jpg)
+
+```
+select sum(true_sale*unit) as totalsale from product where pool_id=154;
+```
+![-w1209](media/16010187634773.jpg)
+
+两个表查询出的算力相同， 购买订单的用户算力 和 产品的用户算力
+
+再断点调试一下， 看到购买订单的用户算力  小于产品的 用户算力： 
+![-w1630](media/16010224904115.jpg)
+space 差值为 30750， 正好类似两个订单凑到：
+![-w1407](media/16010249810691.jpg)
+ 
+ 购买订单表应为有些用户在用户表找不到了， 导致购买订单表与用户表内连接时， 这些不存在的用户的订单被过滤掉了。 
+ 如果改为左连接， 此处用户收益校验可以过， 但不合理
+ ![-w1201](media/16010257924998.jpg)
+ 
+#### 找出购买订单中，在用户表里已经不存在的用户的user_code
+
+ ```sql
+ SELECT po.code, sum(po.buy_power) as buy_pwoer_total  FROM purchase_orders po left join user u on po.code = u.code WHERE (po.order_type = 4 and po.pid in (  SELECT id from product where pool_id=154 )  and po.code not in (SELECT po.code  FROM purchase_orders po inner join user u on po.code = u.code WHERE (po.order_type = 4 and po.pid in (  SELECT id from product where pool_id=154 )) ))  
+ ```
+ 
+ ![-w1565](media/16010266818718.jpg)
+找到的用户表已不存在的user_code， 这个订单的算力 就是 用户缺少的算力。 导致用户收益校验不过。 
+
+如果不把这个订单找出来， 那么订单的算力，没有任何用户领取， 这个算力就被白白浪费掉。 
+
+
+不能清理数据， 清数据有时是为了掩盖问题。 
+
+
