--- a/区块链/开发矿池-解决金额校验不过的问题.md
+++ b/区块链/开发矿池-解决金额校验不过的问题.md
@@ -16,9 +16,10 @@
 SELECT  code, sum(num) as numsum, apply_time, gmt_create, gmt_modified  from currency_transfer GROUP BY code 
 ```
 ![-w1407](media/16008515291340.jpg)
-
+```
 SELECT  code, sum(num) as numsum, apply_time, gmt_create, gmt_modified  from currency_transfer GROUP BY code 
-
+```
+                                
 找到code 为空， 但金额却为1.905fil 的， 查code如何产生的。 
 code为空， 导致 currency_transfer 有转账记录， 而balance表没有记录。 
 
@@ -79,18 +80,28 @@ purchase_orders 表里有的code 为1591164524419481:
 
 找到问题的根本原因，即是purchase_orders 左连接 user 表， 当用户表里删除了一个用户， 而购买订单里还有这个用户， 左连接的结果就是把这个没有用户的订单也查询出来。 
 
-### 解决办法
-#### 数据库中删除错误数据
-1. 转账表删除没有用户的记录
+## 解决办法
+### 不合理的解决办法： 数据库中删除错误数据
+#### 1. 转账表删除没有用户的记录
 ![-w621](media/16009292025806.jpg)
 这样校验就过了：
 ![-w621](media/16009292862583.jpg)
 
-2. 相应的矿池用户收益表里也要删除，没有用户的记录：
+#### 2. 相应的矿池用户收益表里也要删除，没有用户的记录：
 ![-w579](media/16009294787589.jpg)
 
-3. 
+#### 3. 购买订单表里删除用户表里不存在的code
 ![-w719](media/16009316846114.jpg)
+
+这些数据的删除， 导致在收益分配时， 用户金额的校验不过。 因为订单的表给改了。 
+
+
+### 合理的解决办法：  插入记录， 以补齐缺少的数据
+1. 用户表里增加用户， 在转账时， 能找到这个数据
+2. 
+
+給用户增加金额， 即balance表与转账表的用户金额的差值10.059， balance表比转账表少， 就把balance表加上这些金额： 
+![-w1044](media/16010149369228.jpg)
 
 #### 代码修改
 1. 将购买订单表 与 用户表 的左连接， 改为 内连接， 这样，只有购买订单表和用户表都有用户， 才会在连接中查询到， 避免查询出一个已经没有用户的订单。 
