--- a/区块链/官方版本跑私链.md
+++ b/区块链/官方版本跑私链.md
@@ -2,6 +2,17 @@
 
 官方集群组网文档
 
+
+237.098/(118.950*1000)*900,138.85
+
+矿池
+
+进：  矿工合起来， 
+    很多钱包
+
+出：
+
+userGroup.POST("/getUserSpaceIncome", user.GetUserSpaceIncome)
 ### 应用列表
 
 - lotus
@@ -93,3 +104,81 @@ WORKER_PATH="./.sealworker8" STORAGE_API_INFO="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXV
 # 其他机器上可以跑一个worker做precommit2和commit, 也可以把两个任务分开跑多个worker
 WORKER_PATH="./.sealworker1" STORAGE_API_INFO="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJBbGxvdyI6WyJyZWFkIiwid3JpdGUiLCJzaWduIiwiYWRtaW4iXX0.O6OW50-3MKoLvTP9yxQplc0ecER5LXF0Z3VADrxTn6k:/ip4/10.10.11.41/tcp/2345/http" nohup ./lotus-seal-worker run --address="10.10.11.44:6166" --precommit1=false > sealer1.log 2>&1 &
 ```
+
+预生产： 
+
+李刚's avatar
+矿池增加钱包地址时，增加不属于矿工的普通钱包地址
+优化用户首页矿池数据相关代码
+应需求调整，去掉昨日收益计算，并整理优化用户收益计算
+按用户收益数据从存储空间移到我的通证，整理代码
+spacerace产出记录独立出一个单独的接口
+增加矿池收益每日统计分析接口
+
+  理一下非正常打款的情况， 
+  后
+  
+  
+  针对今天金源测试的情况， 
+
+
+select * from user where phone='18116355313'  
+
+  
+    
+  
+  ![-w807](media/16035205893252.jpg)
+![-w807](media/16035206682019.jpg)
+
+update balance set total_balance=total_balance-3, frozen=frozen-3 where code='1603246349436606'
+  
+forcepool 预发布：
+
+![-w1383](media/16035224687253.jpg)
+
+搞的别人听不懂
+
+## 用户提现失败的应急解决方案 
+#### 应急方案1： 线上修改balance表， 最终达到打款已完成
+找到用户的code
+select * from user where phone='18521721867' 
+
+用code找到用户的balance表，记录好没改之前的值
+select * from balance where code='1603246349436606'
+
+找到转账表中失败的记录， 找到，对应的fil个数和转账Id, 假设fil个数3.1, 转账id=76
+select * from currency_transfer where code='1603246349436606' and status=3
+
+失败的记录，  确定好打给用户的fil个数, 这里为3.1， 
+update balance set total_balance=total_balance-3.1, frozen=frozen-3.1 where code='1603246349436606' and coin_type=2
+
+将转账表的失败记录状态改为4， 表示打款成功完成, 
+update currency_transfer set status=4 WHERE id=76
+
+#### 应急方案2: 线上修改转账表， 最终达到失败单重新进入待打款
+找到用户的code
+select * from user where phone='18521721867' 
+
+找到转账表中失败的记录， 找到，对应的fil个数和转账Id, 假设fil个数3.1, 转账id=76
+select * from currency_transfer where code='1603246349436606' and status=3
+
+看fil个数是否一致与excel表的一致， 若一致, 更新转账表： 
+update currency_transfer set status=6 WHERE id=76
+
+后台管理，看是否增加了一条待打款。
+
+adminbackend 
+数据库字段修改： 
+currency_transfer表的feecount长度改为255， 
+commitid: 65b3dd84721d29f73d492fb1a11f002f064bce4d
+
+
+userbackend 
+配置文件修改：
+poolShowTaskCronSpec = "15 0 * * *"
+commietid : 135e736a6036379a98d677b5a3ed48d6519ea73d
+
+auth_init.lua
+
+
+![-w1763](media/16033619055337.jpg)
