--- a/Golang/理解缓冲输入流.md
+++ b/Golang/理解缓冲输入流.md
@@ -43,6 +43,22 @@ for i := 0; input.Scan(); i++ {
 ```
 scanner与reader都是输入流， 区别在于scanner的数据多少是动态的， 会随时增加，
 比如网络的另一端是用户动态输入。
-reader的数据多少是确定的。 
+reader的数据多少是确定的。
+
+
+不对B用户做历史资产转移
+转移账单增加apply_time, 以在账单明细里显示出操作时间
+转移前的资产核算改为四舍五入
+荣来系统启动时，不再重复初始化荣来数据库
+增加荣来spacerace总记录
+整理代码
+汇总到荣来的转帐做标记 
+
+毁呰
+肴馔
+上馔
+各赍宝华满掬
+
+不知佛方便、    随宜所说法，    恶口而颦蹙，    数数见摈出，
 
 
