--- a/区块链/官方版本跑私链.md
+++ b/区块链/官方版本跑私链.md
@@ -124,6 +124,17 @@ spacerace产出记录独立出一个单独的接口
 
 select * from user where phone='18116355313'  
 
+
+
+添加荣来数据迁移R2系数备用方案
+按算力比列和含服务费率算力比列计算用户待转移的矿池收益，spacerace建立，测试网福利等
+增加测试网福利转移前，转移后的记录
+修改奖励核算错误的问题
+解决一个用户下所有订单都转走时报错的问题
+解决订单多次导入后，用户列表错误的问题
+修改分配查询相关
+
+
   
     
   
