--- a/区块链/巨页内存的开启.md
+++ b/区块链/巨页内存的开启.md
@@ -225,7 +225,22 @@ admin 后端修改：
 增加一般地址添加功能
  
 
+增加对抵押，已提现的统计
+forcepool数据库中的矿池表，产品表等按荣来算力比例同步到荣来数据库
+用导入订单时的时间标记每个要转移的订单
+用户数据迁移统计测试网福利
+同一产品的订单的算力汇总
+汇总转移记录增加算力数据
+迁移的用户个数统计
+解决用户资产转移详情转移订单错误问题
+解决待转移资产详情出错的问题
 
+古来圣贤多寂寞
+气满不思食
+
+
+
+排查转出方数据详情异常问题， 因实验数据， 所有转出方订单都已经转出。 
 
 
 
