--- a/区块链/当天问题.md
+++ b/区块链/当天问题.md
@@ -55,8 +55,14 @@ tcp        0      0 127.0.0.1:11234         127.0.0.1:51386         ESTABLISHED 
 tcp        0      0 127.0.0.1:51386         127.0.0.1:11234         ESTABLISHED 3194/5
 tcp        0      0 127.0.0.1:45002         127.0.0.1:11234         ESTABLISHED 24367/5
 ```
+处理生产admin发布后的不能登录的问题
+处理生产数据库查询， 统计未提现用户
+查询个别用户的认证信息
+没有荣来配置项时，不连接荣来数据库
+解决生产环境提现单导出失败的问题
 
 
+一切众生皆有如是净性。譬一精金冶为钗钏溺器。金性是一。溺器者。具薉非金薉故。
 #### fconfig表没有填好， 导致sealer 报错， 导致sector长时间停在commiting
 sealer.log 报错log:
 ```
