--- a/区块链/搭建私有链创世节点.md
+++ b/区块链/搭建私有链创世节点.md
@@ -21,6 +21,18 @@
 
 
 
+api/admin/pledge_tob_transfer.go
+
+
+
+添加创建荣来数据库功能，并计算荣来空间与forcepool总空间的比例，记录到user表
+增加带服务费率的单个用户转移空间与单个用户的总空间的比例计算，并记录到数据库表
+荣来用户拆分：balance表，spacerace奖励表， spacerace释放记录表，矿池收益记录表按空间比例，到账比例转移
+荣来分离：从订单列表整理出转出方，转入方为一个已存在用户，不去创建新用户作为转入方
+生产环境，修改资产转移中有提现的用户的认证信息 
+合并测试网福利代码， 发布生产
+
+
 
 
 #### lotus daemon 会下载参数文件
