--- a/Glusterfs/理解创建裸设备并在裸设备上创建一个分区.md
+++ b/Glusterfs/理解创建裸设备并在裸设备上创建一个分区.md
@@ -1,5 +1,7 @@
-1. 在虚拟机上新增一个硬盘，其实就是裸设备硬盘/dev/sdb
+## 1. 在虚拟机上新增一个硬盘，其实就是裸设备硬盘/dev/sdb
 重启centos, fdisk -l 就可以看到/dev/sdb
+
+```
 [node1@215-node ~]$ sudo fdisk -l
 [sudo] node1 的密码：
 Disk /dev/sda：80 GiB，85899345920 字节，167772160 个扇区
@@ -8,7 +10,6 @@ Disk /dev/sda：80 GiB，85899345920 字节，167772160 个扇区
 I/O 大小(最小/最佳)：512 字节 / 512 字节
 磁盘标签类型：dos
 磁盘标识符：0x481393e9
-
 设备       启动    起点      末尾      扇区 大小 Id 类型
 /dev/sda1  *       2048   2099199   2097152   1G 83 Linux
 /dev/sda2       2099200 167772159 165672960  79G 8e Linux LVM
@@ -31,13 +32,14 @@ Disk /dev/mapper/cl-swap：2 GiB，2197815296 字节，4292608 个扇区
 扇区大小(逻辑/物理)：512 字节 / 512 字节
 I/O 大小(最小/最佳)：512 字节 / 512 字节
 
-
 Disk /dev/mapper/cl-home：27 GiB，28936503296 字节，56516608 个扇区
 单元：扇区 / 1 * 512 = 512 字节
 扇区大小(逻辑/物理)：512 字节 / 512 字节
 I/O 大小(最小/最佳)：512 字节 / 512 字节
-==========================================================================================
-2. 在裸设备/dev/sdb上创建一个分区/dev/sdb1
+
+```
+## 2. 在裸设备/dev/sdb上创建一个分区/dev/sdb1
+```
 [node1@215-node ~]$ sudo fdisk /dev/sdb
 
 欢迎使用 fdisk (util-linux 2.32.1)。
@@ -101,7 +103,9 @@ I/O 大小(最小/最佳)：512 字节 / 512 字节
 分区表已调整。
 将调用 ioctl() 来重新读分区表。
 正在同步磁盘。
+```
 
+```
 [node1@215-node ~]$ sudo fdisk -l
 Disk /dev/sda：80 GiB，85899345920 字节，167772160 个扇区
 单元：扇区 / 1 * 512 = 512 字节
@@ -142,4 +146,4 @@ Disk /dev/mapper/cl-home：27 GiB，28936503296 字节，56516608 个扇区
 单元：扇区 / 1 * 512 = 512 字节
 扇区大小(逻辑/物理)：512 字节 / 512 字节
 I/O 大小(最小/最佳)：512 字节 / 512 字节
-
+```
