--- a/Mysql/分组查询.md
+++ b/Mysql/分组查询.md
@@ -12,7 +12,7 @@ having一般跟在group by之后，执行记录组选择的一部分来工作的
 where则是执行所有数据来工作的。
 
 ### 学生，科目，成绩表的分组查询
-```
+```sql
 select * from score;
 
 # 查询每个学生成绩大于90的科目 
