--- a/区块链/主题.md
+++ b/区块链/主题.md
@@ -17,11 +17,28 @@ P1 到P2 各个生成的文件
 
 给定空间
 
+### 区块链经济
+看好中国经济
+
+区块链的价值之一， 快速建立信任， 货币， 硬通货的不端演变， 白银， 变成黄金， 比特币， 还要在往前演化， 比特币， 之所以特别值钱， 还是
+
+为什么越挖越多， 而以太还是在涨， 因为接受它的人越来越多了，  
+
+个人的数字资产未来可以买卖
+
+汽车刚出现的时候， 英国皇家反对， 理由很多： 在哪跑， 没那么好条件的路， 能跑多远， 得有多大的邮箱， 安全问题， 
+有问题， 不代表， 不发展， 不前进， 带着问题，发展，前进， 本来就是很正铲的事， 
+问题很多， 不代表没有前景， 
+终究的判断， 还是这个新事物， 有没有解决实际的问题， 如果处于新兴阶段， 这个就非常有价值了
 
 
-5.  compputeproffailed，和commit failed的原因。   所有的任务都成功完成， 但seal错误， 因为出现分叉， 过一会回复， 分叉期间的这些sector都是failed， sealer.log的关键字确认
+说个0.1 的数字， 打消众人的疑虑， 人不在意， 你说真实的数字， 而是关心你把话说圆， 相反真实数字敏感， 说了会成为黑色历史
 
-6.  发任务只发一个的原因, sealer 的环境变量说明
+
+
+1. computeproffailed，和commit failed的原因。   所有的任务都成功完成， 但seal错误， 因为出现分叉， 过一会回复， 分叉期间的这些sector都是failed， sealer.log的关键字确认
+
+2. 发任务只发一个的原因, sealer 的环境变量说明
 
 
 7.  版本问题， 测试的最终目的， 是给出一个稳定版本
