--- a/Mysql/分组查询.md
+++ b/Mysql/分组查询.md
@@ -37,7 +37,7 @@ select a.subject_id,a.student_id from score as a group by a.subject_id, a.studen
 select DISTINCT a.subject_id,a.student_id,a.score from score as a group by a.subject_id,a.student_id,a.score having max(a.score);
 ```
 
-```
+```sql
 select * from score;
 select a.subject_id,a.student_id,a.score from score as a group by a.subject_id;
 # select a.id,a.subject_id,a.student_id,a.score,b.id,b.subject_id,b.student_id,b.score from score as a left join score as b on a.subject_id=b.subject_id; 
@@ -52,7 +52,6 @@ select a.subject_id,a.student_id,a.score from score as a group by a.subject_id;
 
 select a.subject_id,a.student_id,a.score from score as a 
 group by a.subject_id,a.student_id,a.score  having count(a.subject_id)>=1  order by a.subject_id,a.score desc ;
-
 ```
 
 
