--- a/区块链/开发矿池-收益的分配与审核.md
+++ b/区块链/开发矿池-收益的分配与审核.md
@@ -6,6 +6,9 @@
 矿池的空间一部分是卖给了用户， 一部分是平台自己持有， 所以对应的收益就有用户收益， 和平台收益， 如：
 ![-w1227](media/16010045943160.jpg)
  
+ 
+法官都缺少保护，何以体现法律的威严 
+法官需要监督，私人方面尽量与被告原告隔离， 以保证秉公执法
 
 收益的来源是出块， 每出一个块就奖励一定的fil，每期的收益是指一个矿池在一段时间的总收益， 即产生多少fil。  
 每期的收益中包含用户收益， 平台服务费， 平台自持收益。 
