--- a/xiuxing/心得.md
+++ b/xiuxing/心得.md
@@ -38,4 +38,30 @@
 佛是圣人中的圣人， 佛为众生讲法， 也是为我讲法， 佛所说的话即是我前行路上的明灯， 没有光明，路就是黑暗的， 努力也多是无意义的，这也是光明的意义。 
 
 
+可以将的话题： 
+不要完全相信自己的五官感觉到的
+
+每个人都很可贵，自己很可贵
+
+基本物质满足后，痛苦，与幸福都是相对的， 
+
+关于梦
+
+这个世界最奇妙的还是自己
+
+感谢让你高兴的人，让你不高兴的人
+
+所有道理都是错误的， 只有满足了前提条件才是对的
+
+欲望让人陷入泥潭
+ 
+ 
+StatChainInfo添加单T质押
+fix: 修改StatisticalIndicators接口计算新增算力
+StatChainInfo接口增加当前基础服务费率
+处理测试环境filscan部分数据
+
+心里想的， 嘴里念叨的， 耳朵听到的， 都是佛法， 如何， 时时提醒这个世间不是安身立命之地， 不是久留之地， 是秽土， 若不是圣人罩着， 可能是暗无天日。 
+ 
+ 
  
