--- a/区块链/命令汇集.md
+++ b/区块链/命令汇集.md
@@ -221,12 +221,13 @@ ansible "$p23" -m shell -a "killall ./floader "
 #### 单机同步scp
 mac 上拷贝到跳板机：
 ```
-scp -rpP 54073 -i ~/.ssh/id_rsa。 forcenet.zip root@103.78.229.68:/home/zhenglun/version/
+scp -rpP 54073 -i ~/.ssh/id_rsa forcenet.zip root@103.78.229.68:/home/zhenglun/version/
 ```
 -r： 递归复制整个目录
 -p： 保留原文件的修改时间，访问时间和访问权限。
 -P:  注意是大写的P, 指定数据传输用到的端口号
 -i:  identity_file： 从指定文件中读取传输时使用的密钥文件，此参数直接传递给ssh。
+也可以指定pem文件， 
 
 
 #### 数据库连通性
