--- a/区块链/日志.md
+++ b/区块链/日志.md
@@ -7,3 +7,27 @@
 用户表中增加记录转移订单产品id集合与用户spacerace产品id集合的交集inner_pids
 转移balance按新公式转移的矿池到账 + 该用户总的到账SR奖励*SR2 - 转移的已提现重新计算
 核对表格数据与程序计算数据
+
+
+## 开会
+不能停留早期红利
+商业检索
+真实的数据源
+自己存在自己的服务器上
+商业要走出去
+内容提供方
+使用方
+用一些政策
+七牛云村春
+走在别人前面
+起步资金
+组织架构层面
+社区的重要
+申请经费
+盈利模式
+去中心化， 
+新出现的需求：  区块链的存储， 
+小步快跑， 
+
+那些人 都被查出来了
+肯定是总统签署了
