--- a/区块链/讲的要点.md
+++ b/区块链/讲的要点.md
@@ -29,3 +29,11 @@ ec7336f1  Browse Files
 整理代码
 
 
+处理 actorById 等接口慢的问题
+创建filscan 与 filwallet 的生产分支
+filscan 与 filwallet 后端服务发布生产
+修改代码，将wallet后端接口从 chaininfo分离出来
+参加filscan 与 filwallet 需求会议
+编写获取worker, controller新接口
+
+
