--- a/xiuxing/心得.md
+++ b/xiuxing/心得.md
@@ -64,4 +64,5 @@ StatChainInfo接口增加当前基础服务费率
 心里想的， 嘴里念叨的， 耳朵听到的， 都是佛法， 如何， 时时提醒这个世间不是安身立命之地， 不是久留之地， 是秽土， 若不是圣人罩着， 可能是暗无天日。 
  
  
+ 何时能把念佛， 才是深信念佛
  
